raw_hardware_motor_implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,14 @@ project(rob_pkg)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  controller_manager
+  roscpp
+  rospy
+  std_msgs
+  std_srvs
+  three_dof_planar_manipulator
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -99,9 +106,9 @@ find_package(catkin REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES rob_pkg
-#  CATKIN_DEPENDS other_catkin_pkg
+CATKIN_DEPENDS controller_manager roscpp rospy std_msgs std_srvs
 #  DEPENDS system_lib
 )
 
@@ -112,8 +119,8 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
-# ${catkin_INCLUDE_DIRS}
+ include
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -145,6 +152,10 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+
+add_executable(single_joint_hardware_interface src/robot_hardware_interface_node.cpp)
+#add_dependencies(robot_hardware_interface ${catkin_EXPORTED_TARGETS})
+target_link_libraries(single_joint_hardware_interface ${catkin_LIBRARIES})
 
 #############
 ## Install ##
